@@ -5,7 +5,6 @@ import java.util.List;
 import nl.tudelft.jpacman.level.Level;
 import nl.tudelft.jpacman.level.Player;
 
-import com.google.common.collect.ImmutableList;
 import nl.tudelft.jpacman.points.PointCalculator;
 
 /**
@@ -48,7 +47,7 @@ public class SinglePlayerGame extends Game {
 
     @Override
     public List<Player> getPlayers() {
-        return ImmutableList.of(player);
+        return java.util.List.of(player);
     }
 
     @Override
